<resources>
    <string name="app_name">PedraPapelTesoura</string>
    <string name="app_title">Pedra Papel ou Tesoura</string>
    <string name="app_choice">Escolha do APP</string>
    <string name="player_choice">Escolha uma opção abaixo</string>
    <string name="player_win">Você ganhou</string>
    <string name="player_lose">Você perdeu</string>
    <string name="stone_content">Opção Pedra</string>
    <string name="paper_content">Opção Papel</string>
    <string name="cisors_content">Opção Tesoura</string>
    <string name="none_content">Opção Padrão</string>
</resources>
